spacing issue

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -74,7 +74,6 @@ header {
   justify-content: center;
   align-items: center;
   height: 95vh;
-  width: 100vw;
 }
 
 .onelogo {
